decision template generation